# opendbf

./: LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
opendbf/: dbf.py  field.py  header.py
src/opendbf/: __init__.py  codepage.py  dbf.py  field.py  header.py
tests/: conftest.py  test_opendbf.py
