[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "setuptools_scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "opendbf/version.py"

[tool.pytest.ini_options]
minversion = "6.0"

[tool.black]
target-version = ['py38']

[tool.isort]
profile = "black"