[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opendbf"
authors = [
    {name = "Fangchen Li", email = "fangchen.li@outlook.com"}
]
description = "A pure Python DBF file parser."
readme = "README.md"
keywords = ["DBF"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "isort",
    "mypy",
    "pandas",
]

[tool.setuptools_scm]

[tool.black]
target-version = ['py39']

[tool.isort]
profile = "black"