[metadata]
name = opendbf
description = Pure Python dbf to csv converter
long_description = file: README.md
long_description_content_type = text/markdown
author = Fangchen Li
author_email = fangchen.li@outlook.com
license = BSD-3-Clause
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independen
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/fangchenli/opendbf/issues
    Source Code = https://github.com/fangchenli/opendbf
keywords =
    dbf
    csv

[options]
packages = find:
python_requires = >=3.8.0
include_package_data = True
zip_safe = True

[options.extras_require]
test =
    pandas
    pytest

[options.entry_points]
console_scripts =
    dbf_to_csv = opendbf:dbf_to_csv